# pacbayes-sparse-tsk

./: .gitignore  CITATION.cff  EXECUTION_STATUS_AR.md  LICENSE  README.md  RELEASE_FILE_SHA256.txt  pyproject.toml  requirements-lock.txt
artifacts/: development_protocol_snapshot_v3.json  development_v3_run_manifest.json  energy_case_v3_aborted_attempt_01.json  energy_case_v3_aborted_attempt_02.json  energy_case_v3_manifest.json  energy_case_v3_preoutcome_lock.json  energy_case_v3_preoutcome_lock_v2.json  energy_case_v3_preoutcome_lock_v3.json  fixed_k_sensitivity_v4_manifest.json  integrated_revision_v4_3_manifest.json  pjm_confirmatory_v3_preoutcome_lock.json  pjm_confirmatory_v3_retry01.stdout  pjm_data_preparation_audit.json  release_manifest_energy_v3.json  statistical_analysis_v4_2_manifest.json  structural_ablation_v3_manifest.json  tetouan_data_preparation_audit.json  tetouan_two_hour_data_preparation_audit.json
docs/: DATASETS.md  DEVELOPMENT_V3_REPORT_AR.md  ENERGY_CASE_STUDY_V3_REPORT_AR.md  FIXED_K_SENSITIVITY_V4_REPORT_AR.md  GITHUB_RELEASE_CHECKLIST_AR.md  GITHUB_UPLOAD_CONTENTS_AR.md  GITHUB_UPLOAD_GUIDE_AR.md  INTEGRATED_REVISION_V4_3_REPORT_AR.md  LOCAL_BUILD_AND_GITHUB_AR.md  PACBAYES_VALIDITY_CHECKLIST.md  PJM_DATASET_MANIFEST.json  REPRODUCIBILITY.md  RESULTS_SCHEMA.md  STATISTICAL_ANALYSIS_V4_2_REPORT_AR.md  STRUCTURAL_SPARSITY_ABLATION_V3_REPORT_AR.md  TETOUAN_DATASET_MANIFEST.json  THIRD_PARTY_DATA_LICENSES.md
paper/: BUILD_ORDER.txt  main.tex  refs.bib  supplementary.tex
paper_updates/: energy_case_study_v3_methods.tex  (+3 more)
(+283 files in other folders)
