[build-system]
requires=["setuptools>=69","wheel"]
build-backend="setuptools.build_meta"
[project]
name="pacbayes-sparse-tsk"
version="0.4.3"
description="Reproducible PAC-Bayesian certification for sparse TSK time-series forecasting"
readme="README.md"
requires-python=">=3.10,<3.14"
dependencies=["numpy>=2.0,<3","pandas>=2.1,<3","scikit-learn>=1.4,<2","statsmodels>=0.14,<1","matplotlib>=3.8,<4","PyYAML>=6,<7","tqdm>=4.66,<5"]
[project.optional-dependencies]
dev=["pytest>=8,<10"]
[tool.setuptools]
package-dir={""="src"}
[tool.setuptools.packages.find]
where=["src"]
[tool.pytest.ini_options]
testpaths=["tests/v3"]
addopts="-q"
